--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+  
 
     buildTypes {
         release {
@@ -68,5 +69,14 @@ dependencies {
     implementation 'com.airbnb.android:lottie:6.0.0'
     // facebook
     implementation 'com.facebook.android:facebook-login:latest.release'
+    // maps
+    implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
+
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
 
 }
