--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
 
+    // timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // places services
+    implementation 'com.google.android.libraries.places:places:3.0.0'
+
 }
