--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,12 +17,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoRide"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.rider.home.services.request.RiderRequestActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAEu90XS_BIRbnhk3LDqbrp1RzuNIKOxuA" />
 
         <activity
-            android:name=".ui.rider.HomeRiderActivity"
+            android:name=".ui.rider.RiderActivity"
             android:exported="false" />
         <activity
             android:name=".ui.driver.HomeDriverActivity"
