--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -21,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoRide"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.rider.home.services.availableTrip.AvailableTripsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.rider.home.services.request.RiderRequestActivity"
             android:exported="false" />
