--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:latest.release'
     // maps
     implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    // places services
+    implementation 'com.google.android.libraries.places:places:3.0.0'
 
     // gson
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -84,10 +87,9 @@ dependencies {
     // timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    // places services
-    implementation 'com.google.android.libraries.places:places:3.0.0'
 
     // pick image from gallery or camera
     implementation 'com.github.dhaval2404:imagepicker:2.1'
+
 
 }
