--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,11 @@ plugins {
 android {
     namespace 'com.theideal.goride'
     compileSdk 33
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
         applicationId "com.theideal.goride"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -32,6 +33,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        pickFirst 'META-INF/INDEX.LIST'
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -48,6 +52,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.4'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
