--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.GoRide"
         tools:targetApi="31">
         <activity
+            android:name=".WorkInSpecificTripActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.rider.home.services.availableTrip.AvailableTripsActivity"
             android:exported="false" />
         <activity
@@ -51,25 +54,26 @@
         <activity
             android:name=".ui.auth.AuthenticationActivity"
             android:exported="true" />
+
         <service
             android:name=".utility.FirebaseMessageReceiver"
-            android:stopWithTask="false"
             android:exported="true"
-            >
+            android:stopWithTask="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <receiver
             android:name=".utility.FirebaseMessageReceiverBroadCast"
             android:exported="true"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="${applicationId}" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".ui.rider.home.services.availableTrip.BroadCastReceiverTrip"
             android:enabled="true"
