--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,15 @@
         android:theme="@style/Theme.GoRide"
         tools:targetApi="31">
         <activity
+            android:name=".ErrorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TaxiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SuggestTripsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.driver.home.home_services.work_in_specific_trip.WorkInSpecificTripActivity"
             android:exported="false" />
         <activity
