--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,16 +23,16 @@
         android:theme="@style/Theme.GoRide"
         tools:targetApi="31">
         <activity
-            android:name=".ErrorActivity"
+            android:name=".ui.both.ErrorActivity"
             android:exported="false" />
         <activity
-            android:name=".TaxiActivity"
+            android:name=".ui.driver.home.home_services.taxi.TaxiActivity"
             android:exported="false" />
         <activity
-            android:name=".SuggestTripsActivity"
+            android:name=".ui.driver.home.home_services.suggest_trip.SuggestTripsActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.driver.home.home_services.work_in_specific_trip.WorkInSpecificTripActivity"
+            android:name=".ui.driver.home.home_services.work_in_trip.WorkInTripActivity"
             android:exported="false" />
         <activity
             android:name=".ui.rider.home.services.availableTrip.AvailableTripsActivity"
