--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.GoRide"
         tools:targetApi="31">
         <activity
+            android:name=".ui.driver.profile.items.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.both.ErrorActivity"
             android:exported="false" />
         <activity
